# webhdfspy

./: .gitignore  LICENSE  README.md  README.rst  caca.py  pyWebHDFS.py  pyproject.toml  readme  readme.md  setup.py  tests.py
.github/workflows/: publish.yml
docs/: Makefile  conf.py  index.rst
tests/: conftest.py  test_integration.py  test_unit.py  tests.py
webhdfspy/: __init__.py  webhdfspy.py
